first header section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
 
 <body>
+    <!-- header section  -->
+    <header class="size-20 w-full">
+        <!-- container div  -->
+        <div class="flex justify-between item-center max-w-6xl mx-auto p-4">
+            <!-- logo div  -->
+            <div class="text-5xl mx-auto md:mx-0 md:text-3xl lg:text-3xl">
+                <h1>Company <em class="text-orange-400">Logo</em></h1>
+            </div>
+
+        </div>
+
+    </header>
 
 </body>
 
