second header nav

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
                 <h1>Company <em class="text-orange-400">Logo</em></h1>
             </div>
 
+            <!-- nav  -->
+            <nav class="space-x-4 pt-2 md:block hidden">
+                <a class="text-lg hover:p-2 hover:bg-gray-300 rounded-lg" href="#">Features</a>
+                <a class="text-lg hover:p-2 hover:bg-gray-300 rounded-lg" href="#">Testimonial</a>
+                <a class="text-lg hover:p-2 hover:bg-gray-300 rounded-lg" href="#">Pricing</a>
+                <a class="text-lg hover:p-2 hover:bg-gray-300 rounded-lg" href="#">Content</a>
+            </nav>
+
         </div>
 
     </header>
