add hero section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
 
     </header>
 
+    <!-- hero section  -->
+    <section class="p-4 size-96 w-full bg-gradient-to-r from-[#4f46e5] via-[#6a5af9] to-[#9333ea]">
+        <div class="p-8 flex flex-col max-w-4xl mx-auto md:p-15 lg:p-8">
+            <h1 class="text-6xl text-white mb-4">Transform Your Business</h1>
+            <p class="text-white text-3xl">Elevate your online presence with our cutting-edge solutions</p>
+        </div>
+
+        <button
+            class="p-4 rounded-lg text-xl  flex flex-col max-w-6xl mx-auto bg-white cursor-pointer hover:bg-gray-200 ">get
+            started</button>
+
+    </section>
+
 </body>
 
 </html>
