--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 
     </section>
 
+    <!-- Features section  -->
+    <section class="pb-8 bg-gray-100">
+        <div class="mx-auto max-w-xl">
+            <h1 class="p-15 text-5xl font-bold md:text-3xl lg:text-2xl">Why Choose Us</h1>
+        </div>
+    </section>
+
 </body>
 
 </html>
