add feature card

--- a/index.html
+++ b/index.html
@@ -49,6 +49,32 @@
         <div class="mx-auto max-w-xl">
             <h1 class="p-15 text-5xl font-bold md:text-3xl lg:text-2xl">Why Choose Us</h1>
         </div>
+
+        <!-- Features Grid  -->
+
+        <div class="p-4 max-w-6xl mx-auto grid gap-2 lg:grid-cols-3 md:grid-cols-2">
+            <div class="bg-white p-4 shadow-lg rounded-lg ">
+                <img class="w-20 h-20" src="ICO/flash-on-svgrepo-com.svg" alt="">
+                <div class="">
+                    <h1 class="font-bold text-xl">Lightning Fast </h1>
+                    <p class="text-gray-600">Experience plqzing fast performance our optimized solution </p>
+                </div>
+            </div>
+            <div class="bg-white p-4 shadow-lg rounded-lg "">
+                <img class=" w-20 h-20" src="ICO/secure-svgrepo-com.svg" alt="">
+                <div class="">
+                    <h1 class="font-bold text-xl">secure</h1>
+                    <p class="text-gray-600">your date is protected with enterprise grade security</p>
+                </div>
+            </div>
+            <div class="bg-white p-4 shadow-lg rounded-lg "">
+                <img class=" w-20 h-20" src="ICO/red-dimond-premium-svgrepo-com.svg" alt="">
+                <div class="">
+                    <h1 class="font-bold text-xl">premium quality</h1>
+                    <p class="text-gray-600">unmatched quality that sets us apart from the competition</p>
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
