--- a/index.html
+++ b/index.html
@@ -82,6 +82,40 @@
         <div class="mx-auto max-w-xl">
             <h1 class="p-15 text-5xl font-bold md:text-3xl lg:text-2xl">What Our Clients Say</h1>
         </div>
+
+        <!-- Testimonial  -->
+        <div class="grid gap-8 p-4 md:grid-cols-2 lg:gap-2">
+            <div class="bg-gray-200 p-8 mx-auto max-w-2xl rounded-xl shadow-lg">
+                <div class="flex flex-col space-y-4 ">
+                    <p class="text-xl text-gray-700">The best decision we made for our business. The results have been
+                        incredible</p>
+                    <div class="flex item-center space-x-4 ">
+                        <img class="w-20 h-20 rounded-full"
+                            src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8cHJvZmlsZXxlbnwwfHwwfHx8MA%3D%3D"
+                            alt="">
+                        <div class="pt-2">
+                            <h3 class="font-bold text-lg">John Smith</h3>
+                            <span class="text-gray-700">CEO, TechCorp</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-gray-200 p-8 mx-auto max-w-2xl rounded-xl shadow-lg">
+                <div class="flex flex-col space-y-4 ">
+                    <p class="text-xl text-gray-700">The best Outstanding service and support. They truly understand our
+                        needs.</p>
+                    <div class="flex item-center space-x-4 ">
+                        <img class="w-20 h-20 rounded-full"
+                            src="https://images.unsplash.com/photo-1506863530036-1efeddceb993?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjB8fHByb2ZpbGV8ZW58MHx8MHx8fDA%3D"
+                            alt="">
+                        <div class="pt-2">
+                            <h3 class="font-bold text-lg">Sarah Johnson</h3>
+                            <span class="text-gray-700">Founder, Design Studio</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
