add pricing section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
         </div>
     </section>
 
+    <!-- Pricing section -->
+    <section class="pb-8 bg-gray-100">
+        <div class="mx-auto max-w-xl">
+            <h1 class="p-15 text-5xl font-bold md:text-3xl lg:text-2xl">Simple Transparent pricing</h1>
+        </div>
+    </section>
+
 </body>
 
 </html>
