--- a/index.html
+++ b/index.html
@@ -123,6 +123,78 @@
         <div class="mx-auto max-w-xl">
             <h1 class="p-15 text-5xl font-bold md:text-3xl lg:text-2xl">Simple Transparent pricing</h1>
         </div>
+
+        <!-- Pricing Cards -->
+        <div class="p-4 grid gap-2 md:grid-cols-2 lg:grid-cols-3 max-w-6xl mx-auto">
+            <div class="flex flex-col space-y-4 bg-white p-8 rounded-xl shadow-lg">
+                <h3 class="text-2xl font-bold">Starter</h3>
+                <p class="text-3xl font-bold">$29 <em class="text-lg text-gray-600">/mo</em></p>
+                <div class="space-y-2">
+                    <div class="flex items-center gap-2">
+                        <i class="fa-solid fa-check text-green-400"></i>
+                        <span class="text-lg">Basic Features</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <i class="fa-solid fa-check text-green-400"></i>
+                        <span class="text-lg">5 Projects</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <i class="fa-solid fa-check text-green-400"></i>
+                        <span class="text-lg">Basic Support</span>
+                    </div>
+                </div>
+                <button
+                    class="cursor-pointer px-8 py-2 rounded-lg text-lg text-white bg-purple-600 hover:bg-purple-500">
+                    Get Started
+                </button>
+            </div>
+            <!-- two  -->
+            <div class="flex flex-col space-y-4 bg-white p-8 rounded-xl shadow-lg border border-blue-700">
+                <h3 class="text-2xl font-bold">Professional</h3>
+                <p class="text-3xl font-bold">$99 <em class="text-lg text-gray-600">/mo</em></p>
+                <div class="space-y-2">
+                    <div class="flex items-center gap-2">
+                        <i class="fa-solid fa-check text-green-400"></i>
+                        <span class="text-lg">Advanced Features</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <i class="fa-solid fa-check text-green-400"></i>
+                        <span class="text-lg">Unlimited Projects</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <i class="fa-solid fa-check text-green-400"></i>
+                        <span class="text-lg">Priority Support</span>
+                    </div>
+                </div>
+                <button
+                    class="cursor-pointer px-8 py-2 rounded-lg text-lg text-white bg-purple-600 hover:bg-purple-500">
+                    Get Started
+                </button>
+            </div>
+            <!-- three  -->
+            <div class="flex flex-col space-y-4 bg-white p-8 rounded-xl shadow-lg">
+                <h3 class="text-2xl font-bold">Enterprise</h3>
+                <p class="text-3xl font-bold">$299 <em class="text-lg text-gray-600">/mo</em></p>
+                <div class="space-y-2">
+                    <div class="flex items-center gap-2">
+                        <i class="fa-solid fa-check text-green-400"></i>
+                        <span class="text-lg">Custom Features</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <i class="fa-solid fa-check text-green-400"></i>
+                        <span class="text-lg">dedicated Support</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <i class="fa-solid fa-check text-green-400"></i>
+                        <span class="text-lg">SLA Agreement</span>
+                    </div>
+                </div>
+                <button
+                    class="cursor-pointer px-8 py-2 rounded-lg text-lg text-white bg-purple-600 hover:bg-purple-500">
+                    Get Started
+                </button>
+            </div>
+        </div>
     </section>
 
 </body>
