add contect section

--- a/index.html
+++ b/index.html
@@ -197,6 +197,13 @@
         </div>
     </section>
 
+    <!-- Contact Section  -->
+    <section>
+        <div class="mx-auto max-w-xl">
+            <h1 class="p-15 text-5xl font-bold md:text-3xl lg:text-2xl">Get in Touch</h1>
+        </div>
+    </section>
+
 </body>
 
 </html>
