--- a/index.html
+++ b/index.html
@@ -202,6 +202,19 @@
         <div class="mx-auto max-w-xl">
             <h1 class="p-15 text-5xl font-bold md:text-3xl lg:text-2xl">Get in Touch</h1>
         </div>
+
+        <div id="send-message" class="max-w-6xl mx-auto p-4">
+            <div class="flex flex-col space-y-4 p-4 ">
+                <input class="shadow-lg p-4 rounded-lg" type="name" id="name" placeholder="name">
+                <input class="shadow-lg p-4 rounded-lg" type="email" id="email" placeholder="email">
+                <textarea class="shadow-lg p-4 rounded-lg w-full h-50" name="text" id="text"
+                    placeholder="write your issues"></textarea>
+            </div>
+            <button id="send-btn"
+                class="cursor-pointer px-8 py-2 rounded-lg text-lg text-white bg-purple-600 hover:bg-purple-500">
+                send Message
+            </button>
+        </div>
     </section>
 
 </body>
