--- a/index.html
+++ b/index.html
@@ -217,6 +217,13 @@
         </div>
     </section>
 
+    <!-- footer section  -->
+    <footer class="p-8 bg-black ">
+        
+        <hr class="text-gray-300 mb-2">
+        <p class="m-4 text-gray-400 mx-auto max-w-xl">&copy; 2025 CompanyLogo. All right reseved</p>>
+    </footer>
+
 </body>
 
 </html>
