--- a/index.html
+++ b/index.html
@@ -219,7 +219,39 @@
 
     <!-- footer section  -->
     <footer class="p-8 bg-black ">
-        
+        <div class="max-w-6xl mx-auto md:flex">
+            <div class="p-4 w-80">
+                <h2 class="text-gray-300">CompanyLogo</h2>
+                <p class="text-gray-400 w-full">Transform your business with our cutting edge solution</p>
+            </div>
+            <div class="p-4">
+                <h2 class="text-gray-300">Quick Links</h2>
+                <div class="flex flex-col">
+                    <span class="text-gray-400">Features</span>
+                    <span class="text-gray-400">Testimonial</span>
+                    <span class="text-gray-400">Pricing</span>
+                    <span class="text-gray-400">Contact</span>
+                </div>
+            </div>
+            <div class="p-4 ">
+                <h2 class="text-gray-300">Legal</h2>
+                <div class=" flex flex-col">
+                    <span class="text-gray-400">Privacy Policy</span>
+                    <span class="text-gray-400">Terms of service</span>
+                </div>
+
+            </div>
+            <div class="p-4">
+                <h2 class="text-gray-300">Connect</h2>
+                <div class="flex flex-col space-x-4 lg:flex-row  ">
+                    <span class="text-gray-400 ">Twitter</span>
+                    <span class="text-gray-400 ">LinkedIn</span>
+                    <span class="text-gray-400 ">Facebook</span>
+                </div>
+
+            </div>
+        </div>
+
         <hr class="text-gray-300 mb-2">
         <p class="m-4 text-gray-400 mx-auto max-w-xl">&copy; 2025 CompanyLogo. All right reseved</p>>
     </footer>
