--- a/index.html
+++ b/index.html
@@ -256,6 +256,16 @@
         <p class="m-4 text-gray-400 mx-auto max-w-xl">&copy; 2025 CompanyLogo. All right reseved</p>>
     </footer>
 
+    <script>
+        const sendMessage = document.querySelector('#send-message')
+        const sendBtn = document.querySelector('#send-btn')
+        sendBtn.addEventListener("click", (event) => {
+            event.preventDefault()
+            // console.log("hellow")
+            alert("your message was sended")
+        })
+    </script>
+
 </body>
 
 </html>
